Add show endpoint
